upload of imgs and .svg resize

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <!-- Header / Hero Section -->
   <header>
     <div>
-      <!-- Ask Copilot to teach you about `.svg`. 🙂 You'll need to resize the logo with CSS. -->
-      <img src="img/intel-header-logo.svg" alt="Intel Logo" />
+      <!-- Add the header-logo class for CSS resizing and padding -->
+      <img src="img/intel-header-logo.svg" alt="Intel Logo" class="header-logo" />
       <!-- Main Heading -->
       <h1>
         Sustainability Through the Ages
