Add all nine timeline cards horizontal scroll

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <header id="main-header">
     <div>
       <!-- Add the header-logo class for CSS resizing and padding -->
-      <img src="img/intel-header-logo.svg" alt="Intel Logo" class="header-logo" />
+       <div class="header-logo">
+       <img src="img/intel-header-logo.svg" alt="Intel Logo"></div>
       <!-- Main Heading -->
       <h1>
         Sustainability Through the Ages
@@ -20,8 +21,7 @@
 
       <!-- Subheading / Description -->
       <p>
-        Explore Intel's journey through time, discovering how our commitment
-        to innovation has shaped a more sustainable future for technology 
+        Explore Intel's journey through time, discovering how our commitment to innovation has shaped a more sustainable future for technology 
         and our planet.
       </p>
     </div>
@@ -29,6 +29,7 @@
 
   <!-- Timeline Cards Section -->
   <section id="timeline-section">
+    <!-- Use a flex container for horizontal scroll -->
     <div class="timeline-cards">
 
       <!-- Card 1: 1968 -->
@@ -90,9 +91,7 @@
          <img src="img/5.jpg" alt="Intel 5">
         <p>
           This year marks Intel's highest annual greenhouse gas emissions 
-          for operations. Over subsequent years, Intel invests heavily in 
-          chemical abatement, renewable energy, and energy-efficient 
-          manufacturing to reverse this trend.
+          for operations.         
         </p>
       </div>
 
