horizontal break line in header

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <h1>
         Sustainability Through the Ages
       </h1>
-
+      <!-- Add a vibrant horizontal break line for visual separation -->
+      <hr>
       <!-- Subheading / Description -->
       <p>
         Explore Intel's journey through time, discovering how our commitment to innovation has shaped a more sustainable future for technology 
